# vimde

./: README.md
.config/nvim/: init.vim
.config/tmuxp/: vimde.yaml
nvim_venv/: pyproject.toml
